// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScanSourceList Component should handle multiple status messages: connect status 1`] = `
<List
  isPlain={true}
>
  <ListItem
    key="1"
  >
    <List
      isPlain={true}
    >
      <ListItem
        icon={
          <Icon
            name=""
            type="pf"
          />
        }
        key="test"
      >
        test
      </ListItem>
      <ListItem
        key="desc-test"
      >
        Connection Scan: ipsum
      </ListItem>
    </List>
  </ListItem>
</List>
`;

exports[`ScanSourceList Component should handle multiple status messages: fallback status 1`] = `
<List
  isPlain={true}
>
  <ListItem
    key="1"
  >
    <List
      isPlain={true}
    >
      <ListItem
        icon={
          <Icon
            name=""
            type="pf"
          />
        }
        key="test"
      >
        test
      </ListItem>
      <ListItem
        key="desc-test"
      >
        Connection Scan: ipsum
      </ListItem>
    </List>
  </ListItem>
</List>
`;

exports[`ScanSourceList Component should handle multiple status messages: inspect status 1`] = `
<List
  isPlain={true}
>
  <ListItem
    key="1"
  >
    <List
      isPlain={true}
    >
      <ListItem
        icon={
          <Icon
            name=""
            type="pf"
          />
        }
        key="test"
      >
        test
      </ListItem>
      <ListItem
        key="desc-test"
      >
        Inspection Scan: sit
      </ListItem>
    </List>
  </ListItem>
</List>
`;

exports[`ScanSourceList Component should render a connected component: connected 1`] = `
<Connect(ScanSourceList)
  id={1}
/>
`;

exports[`ScanSourceList Component should render a non-connected component error: error 1`] = `
<EmptyState
  className="quipucords-empty-state__alert"
>
  <Alert
    isInline={true}
    isPlain={true}
    title="t(view.error, {\\"context\\":\\"scan-jobs\\"})"
    variant="danger"
  >
    t(view.error-message, {"context":"scan-jobs","message":"Lorem Ipsum."})
  </Alert>
</EmptyState>
`;

exports[`ScanSourceList Component should render a non-connected component pending: pending 1`] = `
<EmptyState
  className="quipucords-empty-state"
  variant="large"
>
  <Spinner
    isSVG={true}
    size="sm"
  />
   
  t(view.loading)
</EmptyState>
`;

exports[`ScanSourceList Component should render a non-connected component: non-connected 1`] = `
<ul
  class="pf-c-list pf-m-plain"
>
  <li
    class=""
  >
    <ul
      class="pf-c-list pf-m-plain"
    >
      <li
        class="pf-c-list__item"
      >
        <span
          class="pf-c-list__item-icon"
        >
          <span
            aria-hidden="true"
            class="pficon pficon-"
          />
        </span>
        test
      </li>
      <li
        class=""
      >
        Connection Scan: ipsum
      </li>
    </ul>
  </li>
</ul>
`;
